syntax = "proto3";

import "google/api/annotations.proto";

package IdeYarAPI;
option go_package = "./../pkg/UserProfileServicePb";

service UserProfile {
  rpc ChangeEmail (ChangeEmailRequest) returns (ChangeEmailResponse) {
    option (google.api.http) = {
      post: "/user-profile/change-email"
      body: "*"
    };
  }
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {
    option (google.api.http) = {
      post: "/user-profile/change-password"
      body: "*"
    };
  };
  rpc GetProfileInfo (GetProfileInfoRequest) returns (GetProfileInfoResponse) {
    option (google.api.http) = {
      get: "/user-profile/get-profile"
    };
  };
  rpc UpdateProfileInfo (UpdateProfileInfoRequest) returns (UpdateProfileInfoResponse) {
    option (google.api.http) = {
      post: "/user-profile/update-profile"
      body: "*"
    };
  };
}

message ChangeEmailRequest {
  string email = 1;
}

message ChangeEmailResponse {
}

message ChangePasswordRequest {
  string newPassword = 2;
}

message ChangePasswordResponse {
}

message GetProfileInfoRequest {
}

message GetProfileInfoResponse {
  string username = 1;
  string phone = 2;
  string bio = 3;
  string birthday = 4;
  string profile_image_url = 5;
}


message UpdateProfileInfoRequest {
  string username = 1;
  string phone = 2;
  string bio = 3;
  string birthday = 4;
}

message UpdateProfileInfoResponse {
  string username = 1;
  string phone = 2;
  string bio = 3;
  string birthday = 4;
  string profile_image_url = 5;
}


